# serzcore

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/hello/: CMakeLists.txt  base64.h  hello_stru.h  helloendec.c  helloendec.h  helloendec_lua.c  helloendecc.c  tester.c  tester.lua  tester2.c
examples/traffic/: CMakeLists.txt  tester.c  traffic_stru.h  trafficserz.c  trafficserz.h
src/: CMakeLists.txt  serzcore.c  serzcore.free.c  serzcore.h  serzcore.print.c  serzcore.print.lua.c  serzcore.read.c  serzcore.read.lua.c  serzcore.write.c  serzcore.write.lua.c  serzcore_utils.h
src/utils/: hashset.c  hashset.h  map.c
